# android-logcat-standalone

./: CMakeLists.txt  README.md  workflow.md
androidtoolsets/: CMakeLists.txt
androidtoolsets/include/bionic/: strlcat.h
androidtoolsets/libcutils/: socket_local.h
androidtoolsets/liblog/: log_read.c  logd_write.c
androidtoolsets/libsysutils/src/: SocketClient.cpp
androidtoolsets/logd/: LogBuffer.cpp  LogStatistics.cpp  LogWhiteBlackList.cpp  main.cpp
test/: CMakeLists.txt
test/log/: CMakeLists.txt  log.c
